fix bg from stretching and repeating

--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,13 @@ body,
 	height: 100%;
 }
 
+#root {
+	overflow-y: auto;
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
 }
 
 img,
@@ -59,6 +62,7 @@ body {
 	background-color: #1b1b1b;
 	background-image: url("./assets/mainBG.jpg");
 	background-size: cover;
+	background-repeat: no-repeat;
 	color: white;
 	font-family: 'Unna', serif;
 }
